add delete bank endpoint
